<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/group_29682"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerInParent="true"
            android:letterSpacing="0"
            android:id="@+id/name"
            android:lineHeight="20sp"
            android:text="@string/wallet"
            android:textColor="@color/blue"
            android:textSize="30sp">

        </TextView>



<View
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_below="@+id/name"
    android:id="@+id/view"
    ></View>


    <com.google.android.material.button.MaterialButton
        android:layout_width="350dp"
        android:layout_height="60dp"
       android:id="@+id/btncreate"
        app:rippleColor="@color/white"
        android:backgroundTint="@color/blue"
        android:layout_centerHorizontal="true"
        android:text="@string/create"
        android:layout_below="@id/view"
        android:layout_gravity="center"
        app:cornerRadius="10dp"

        ></com.google.android.material.button.MaterialButton>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btncreate"
            android:text="@string/already"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:letterSpacing="0"
            android:lineHeight="10sp"
            android:textColor="@color/blue"
            android:textSize="20sp"
            ></TextView>

    </RelativeLayout>



</LinearLayout>

